objects/ClientCase__c.object
<CustomObject>
    <fields>
        <fullName>NWORole__c</fullName>
        <label>NWO Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NWO Constructs New Unit for New Home Owner</fullName>
                </value>
                <value>
                    <fullName>NWO Sells a Unit it Had Purchased (with or without rehab) to New Home Owner</fullName>
                </value>
                <value>
                    <fullName>Directly provides Self-Help Housing for New Home Owner</fullName>
                </value>
                <value>
                    <fullName>Plays Intermediary role in providing Self-Help Housing for New Home Owner</fullName>
                </value>
                <value>
                    <fullName>Counselor and/or Broker/Lender ONLY for New Home Owner</fullName>
                </value>
                <value>
                    <fullName>NWO Provides Services to an Existing Home Owner</fullName>
                </value>
                <value>
                    <fullName>Foreclosure Mitigation Counseling</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NetMonthlyIncomeGoal__c</fullName>
        <label>Net Monthly Income Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NetWorthGoal__c</fullName>
        <label>Net Worth Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NewHomeownerCounselingProvided__c</fullName>
        <formula>IF(
  OR(
    TEXT(NWORole__c) == &apos;Counselor and/or Broker/Lender ONLY for New Home Owner&apos;,
    TEXT(NWORole__c) == &apos;NWO Constructs New Unit for New Home Owner&apos;,
    TEXT(NWORole__c) == &apos;NWO Sells a Unit it Had Purchased (with or without rehab) to New Home Owner&apos;,
    TEXT(NWORole__c) == &apos;Directly provides Self-Help Housing for New Home Owner&apos;,
    TEXT(NWORole__c) == &apos;Plays Intermediary role in providing Self-Help Housing for New Home Owner&apos;
  )
  &amp;&amp;
  ISPICKVAL(NWOProvidedCounselingEducation__c, &apos;No&apos;)
  &amp;&amp;
  OR(
    ISPICKVAL(FormalPartneringOrgProvidedService__c, &apos;No&apos;),
    AND(
      ISPICKVAL(FormalPartneringOrgProvidedService__c, &apos;Yes&apos;),
      ISPICKVAL(ServiceProvidedbyFormalPartnerOrg__c, &apos;Lending&apos;)
    )
  )
,
&quot;You have indicated that this new home owner did not receive any counseling or education from either your organization or a formal partner. A home ownership client cannot be reported without counseling and/or education provided by either your organization or your partner.&quot;,
&quot;Passed&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Homeowner Counseling Provided</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberOfAccounts30DaysLate__c</fullName>
        <label>Number of Accounts 30 Days Late</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfAccounts60DaysLate__c</fullName>
        <label>Number of Accounts 60 Days Late</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfAccounts90DaysLate__c</fullName>
        <label>Number of Accounts 90 Days Late</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofDependents__c</fullName>
        <label>Number of Dependents</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OccupationStartDate__c</fullName>
        <label>Occupation Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Occupation__c</fullName>
        <label>Occupation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>One_on_One_Disaster_Preparedness_Assista__c</fullName>
        <formula>IF(ISPICKVAL(Purpose__c , &quot;Disaster Preparedness Assistance&quot;),&quot;Disaster Preparedness Assistance &quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>One-on-One Disaster Preparedness Assista</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>One_on_One_Disaster_Recovery_Assistance__c</fullName>
        <formula>IF(ISPICKVAL(Purpose__c , &quot;Disaster Recovery Assistance&quot;),&quot;Disaster Recovery Assistance&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>One-on-One Disaster Recovery Assistance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>One_on_One_Forward_Mortgage_Delinquency__c</fullName>
        <formula>IF(ISPICKVAL(Purpose__c , &quot;Resolving or Preventing Forward Mortgage Delinquency or Default&quot;),&quot;Resolving or Preventing Forward Mortgage Delinquency or Default&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>One-on-One Forward Mortgage Delinquency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>One_on_One_Homeless_Assistance__c</fullName>
        <formula>IF(ISPICKVAL(Purpose__c , &quot;Homeless Assistance&quot;),&quot;Homeless Assistance&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>One-on-One Homeless Assistance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>One_on_One_Non_Delinquency_Post_Purchase__c</fullName>
        <formula>IF(ISPICKVAL(Purpose__c , &quot;Non-Delinquency Post-Purchase&quot;),&quot;Non-Delinquency Post-Purchase&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>One-on-One Non-Delinquency Post-Purchase</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>One_on_One_Pre_purchase_Homebuying__c</fullName>
        <formula>IF(ISPICKVAL(Purpose__c , &quot;Pre-purchase/Homebuying&quot;),&quot;Pre-purchase/Homebuying&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>One-on-One Pre-purchase/Homebuying</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>One_on_One_Rental_Topics__c</fullName>
        <formula>IF(ISPICKVAL(Purpose__c , &quot;Rental Topics&quot;),&quot;Rental Topics&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>One-on-One Rental Topics</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>One_on_One_Reverse_Mortgage_Delinquency__c</fullName>
        <formula>IF(ISPICKVAL(Purpose__c , &quot;Resolving or Preventing Reverse Mortgage Delinquency or Default&quot;),&quot;Resolving or Preventing Reverse Mortgage Delinquency or Default&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>One-on-One Reverse Mortgage Delinquency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>One_on_One_Reverse_Mortgage__c</fullName>
        <formula>IF(ISPICKVAL(Purpose__c , &quot;Reverse Mortgage&quot;),&quot;Reverse Mortgage&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>One-on-One Reverse Mortgage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherCost__c</fullName>
        <inlineHelpText>The amount of cash-out, debt consolidation, or any other lien-related costs not included under Primary Cost, Rehab Cost, or Closing Cost. For Reverse Mortgages, the ‘Other Cost’ would include the existing mortgage pay-off (if applicable).</inlineHelpText>
        <label>Other Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Outcome_Decrease_Tax_Filing_Cost__c</fullName>
        <formula>IF(INCLUDES( FinancialCapabilityOutcomes__c , &apos;Decreased costs of tax filing&apos;), &apos;Decreased costs of tax filing&apos;,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outcome Decrease Tax Filing Cost</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outcome_Establish_Credit__c</fullName>
        <formula>IF(INCLUDES( FinancialCapabilityOutcomes__c , &apos;Established credit history&apos;),&apos;Established credit history&apos;,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outcome Establish Credit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outcome_Fewer_Collections__c</fullName>
        <formula>IF(INCLUDES( FinancialCapabilityOutcomes__c , &apos;Fewer accounts in collections&apos;),&apos;Fewer accounts in collections&apos;,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outcome Fewer Collections</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outcome_Fewer_Past_Due__c</fullName>
        <formula>IF(INCLUDES( FinancialCapabilityOutcomes__c , &apos;Fewer debts past-due&apos;), &apos;Fewer debts past-due&apos;,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outcome Fewer Past Due</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outcome_Improve_Credit__c</fullName>
        <formula>IF(INCLUDES( FinancialCapabilityOutcomes__c , &apos;Improved credit score and/or resolved credit issues&apos;),&apos;Improved credit score and/or resolved credit issues&apos;,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outcome Improve Credit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outcome_Increase_Credit_Access__c</fullName>
        <formula>IF(INCLUDES( FinancialCapabilityOutcomes__c , &apos;Increased access to credit&apos;),&apos;Increased access to credit&apos;,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outcome Increase Credit Access</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outcome_Increase_Insurance_Coverage__c</fullName>
        <formula>IF(INCLUDES( FinancialCapabilityOutcomes__c , &apos;Increased amount of appropriate insurance coverage&apos;),&apos;Increased amount of appropriate insurance coverage&apos;,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outcome Increase Insurance Coverage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outcome_Increase_Savings__c</fullName>
        <formula>IF(INCLUDES( FinancialCapabilityOutcomes__c , &apos;Increased savings&apos;),&apos;Increased savings&apos;,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outcome Increase Savings</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outcome_Increase_Tax_Benefit__c</fullName>
        <formula>IF(INCLUDES( FinancialCapabilityOutcomes__c , &apos;Increased in tax benefit (increased tax credits and/or increased tax refund received)&apos;),&apos;Increased in tax benefit (increased tax credits and/or increased tax refund received)&apos;,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outcome Increase Tax Benefit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outcome_Increase_Worth__c</fullName>
        <formula>IF(INCLUDES( FinancialCapabilityOutcomes__c , &apos;Increased net worth&apos;),&apos;Increased net worth&apos;,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outcome Increase Net Worth</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outcome_Manage_Fluctuations_in_Income__c</fullName>
        <formula>IF(INCLUDES( FinancialCapabilityOutcomes__c , &apos;Increased ability to manage fluctuations income&apos;),&apos;Increased ability to manage fluctuations income&apos;,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outcome Manage Fluctuations in Income</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outcome_New_Financial_Products__c</fullName>
        <formula>IF(INCLUDES( FinancialCapabilityOutcomes__c , &apos;Engaged in new financial products (e.g. savings/checking account, retirement account, college savings)&apos;),&apos;Engaged in new financial products (e.g. savings/checking account; retirement account; college savings)&apos;,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outcome Engaged in new financial product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outcome_Optimize_Public_Benefits__c</fullName>
        <formula>IF(INCLUDES( FinancialCapabilityOutcomes__c , &apos;Optimized public benefits portfolio&apos;),&apos;Optimized public benefits portfolio&apos;,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outcome Optimize Public Benefits</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outcome_Reduce_Debt__c</fullName>
        <formula>IF(INCLUDES( FinancialCapabilityOutcomes__c , &apos;Reduced level of debt&apos;),&apos;Reduced level of debt&apos;,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outcome Reduce Debt</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outcome_Savings_Goal__c</fullName>
        <formula>IF(INCLUDES( FinancialCapabilityOutcomes__c , &apos;Established savings for specific goal (car purchase, start small business, tuition, etc.)&apos;), &apos;Established savings for specific goal (car purchase; start small business; tuition; etc.)&apos;,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outcome Savings Goal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outcome_Spend_Less_on_Financial_Services__c</fullName>
        <formula>IF(INCLUDES( FinancialCapabilityOutcomes__c , &apos;Spent less on financial services&apos;),&apos;Spent less on financial services&apos;,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outcome Spend Less on Financial Services</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outcome_Three_Months_Savings__c</fullName>
        <formula>IF(INCLUDES( FinancialCapabilityOutcomes__c , &apos;Has sufficient savings to cover at least three months of basic living expenses&apos;),&apos;Has sufficient savings to cover at least three months of basic living expenses&apos;,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outcome Three Months Savings</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <description>HUD-specified outcomes for Education only</description>
        <inlineHelpText>HUD-specified outcomes</inlineHelpText>
        <label>Outcome</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completed financial literacy workshop, including home affordability, budgeting and understanding use of credit</fullName>
                </value>
                <value>
                    <fullName>Completed predatory lending, loan scam or other fraud prevention workshop</fullName>
                </value>
                <value>
                    <fullName>Completed fair housing workshop</fullName>
                </value>
                <value>
                    <fullName>Completed homelessness prevention workshop</fullName>
                </value>
                <value>
                    <fullName>Completed rental workshop</fullName>
                </value>
                <value>
                    <fullName>Completed pre-purchase homebuyer education workshop</fullName>
                </value>
                <value>
                    <fullName>Completed non-delinquency post-purchase workshop, including home maintenance and/or financial management for homeowners</fullName>
                </value>
                <value>
                    <fullName>Completed resolving or preventing mortgage delinquency workshop</fullName>
                </value>
                <value>
                    <fullName>Completed other workshop</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outcome_of_Stabilize_housing__c</fullName>
        <formula>IF(INCLUDES( FinancialCapabilityOutcomes__c , &apos;Stabilized housing (avoided eviction or foreclosure)&apos;),&apos;Stabilized housing (avoided eviction or foreclosure)&apos;,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outcome of Stabilize housing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCODEPartnerOrgProvidedService__c</fullName>
        <inlineHelpText>Select ‘9999’ if the partner organization is not a NeighborWorks approved partner.</inlineHelpText>
        <label>PCODE Partner Org Provided Service</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Other - 9999</fullName>
                </value>
                <value>
                    <fullName>A Community of Friends - 8530</fullName>
                </value>
                <value>
                    <fullName>Aeon - 8494</fullName>
                </value>
                <value>
                    <fullName>Affordable Homes of South Texas, Inc. - 8486</fullName>
                </value>
                <value>
                    <fullName>Affordable Housing Alliance, Inc. - 8495</fullName>
                </value>
                <value>
                    <fullName>Affordable Housing Resources, Inc. - 8272</fullName>
                </value>
                <value>
                    <fullName>Affordable Housing, Education and Development (AHEAD), Inc. - 8274</fullName>
                </value>
                <value>
                    <fullName>AHC, Inc - 8316</fullName>
                </value>
                <value>
                    <fullName>Alamo Community Group - 3050</fullName>
                </value>
                <value>
                    <fullName>Arbor Housing and Development - 8291</fullName>
                </value>
                <value>
                    <fullName>Asian Americans for Equality, Inc. - 8418</fullName>
                </value>
                <value>
                    <fullName>Atlanta Neighborhood Development Partnership, Inc. - 8519</fullName>
                </value>
                <value>
                    <fullName>Avenue Community Development Corporation - 8327</fullName>
                </value>
                <value>
                    <fullName>Avesta Housing Development Corporation - 8413</fullName>
                </value>
                <value>
                    <fullName>BCL of Texas - 8237</fullName>
                </value>
                <value>
                    <fullName>Better Family Life, Inc. - 8520</fullName>
                </value>
                <value>
                    <fullName>Better Housing Coalition - 8430</fullName>
                </value>
                <value>
                    <fullName>Beyond Housing, Inc. - 8021</fullName>
                </value>
                <value>
                    <fullName>Cabrillo Economic Development Corp. - 8275</fullName>
                </value>
                <value>
                    <fullName>Cambridge Neighborhood Apartment Housing Services, Inc. - 8141</fullName>
                </value>
                <value>
                    <fullName>CASA of Oregon - 8553</fullName>
                </value>
                <value>
                    <fullName>CATCH Neighborhood Housing - 8284</fullName>
                </value>
                <value>
                    <fullName>Centro Campesino Farmworker Center, Inc. - 8357</fullName>
                </value>
                <value>
                    <fullName>Champlain Housing Trust - 8241</fullName>
                </value>
                <value>
                    <fullName>Charlotte-Mecklenburg Housing Partnership, Inc. - 8250</fullName>
                </value>
                <value>
                    <fullName>Chattanooga Neighborhood Enterprise, Inc. - 8184</fullName>
                </value>
                <value>
                    <fullName>Chautauqua Home Rehabilitation and Improvement Corporation - 8331</fullName>
                </value>
                <value>
                    <fullName>Chicanos Por La Causa, Inc. - 8521</fullName>
                </value>
                <value>
                    <fullName>Chinatown Community Development Center - 8411</fullName>
                </value>
                <value>
                    <fullName>CHWC, Inc. - 8117</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PermanentResidentAlien__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Permanent Resident Alien</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PhoneNumber__c</fullName>
        <description>Client Phone Number</description>
        <inlineHelpText>Client Phone Number</inlineHelpText>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PostCounselingAnnualHouseholdIncome__c</fullName>
        <label>Post-Counseling Annual Household Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PostCounselingCreditScore__c</fullName>
        <label>Post-Counseling Credit Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PostCounselingHouseholdDebt__c</fullName>
        <label>Post-Counseling Household Debt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PostCounselingResidenceType__c</fullName>
        <label>Post-Counseling Residence Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rent from a property owned/managed by your organization</fullName>
                </value>
                <value>
                    <fullName>Rent from a property not owned/managed by your organization</fullName>
                </value>
                <value>
                    <fullName>Own</fullName>
                </value>
                <value>
                    <fullName>Live with Family Rent-Free</fullName>
                </value>
                <value>
                    <fullName>Other Residence</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PostCounselingSavings__c</fullName>
        <label>Post-Counseling Savings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PreCounselingAnnualHouseholdIncome__c</fullName>
        <label>Pre-Counseling Annual Household Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PreCounselingCreditScore__c</fullName>
        <label>Pre-Counseling Credit Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PreCounselingHouseholdDebt__c</fullName>
        <label>Pre-Counseling Household Debt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PreCounselingResidenceType__c</fullName>
        <label>Pre-Counseling Residence Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rent from a property owned/managed by your organization</fullName>
                </value>
                <value>
                    <fullName>Rent from a property not owned/managed by your organization</fullName>
                </value>
                <value>
                    <fullName>Own</fullName>
                </value>
                <value>
                    <fullName>Live with Family Rent-Free</fullName>
                </value>
                <value>
                    <fullName>Other Residence</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PreCounselingSavings__c</fullName>
        <label>Pre-Counseling Savings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PrimaryClient__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Primary Client</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Client Cases</relationshipLabel>
        <relationshipName>Client_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PrimaryCoAppCreditScoreGoal__c</fullName>
        <label>Primary Co-App Credit Score Goal</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PropertyAddress__c</fullName>
        <label>Property Address</label>
        <type>Address</type>
    </fields>
    <fields>
        <fullName>PropertyCheck__c</fullName>
        <formula>IF(Units__c == 0,
&quot;No property has been added or is missing required information. Add or update a related property record.&quot;,
&quot;Passed&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Check</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PropertyName__c</fullName>
        <label>Property Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PropertyTaxes__c</fullName>
        <label>Property Taxes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PropertyType__c</fullName>
        <label>Property Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Co-op</fullName>
                </value>
                <value>
                    <fullName>Manf / Mobile Home -does not own land</fullName>
                </value>
                <value>
                    <fullName>Manf / Mobile Home -owns land; Multiplex 2-4 units</fullName>
                </value>
                <value>
                    <fullName>Single Family</fullName>
                </value>
                <value>
                    <fullName>Townhouse/Condo</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProvideRealEstateAgentServices__c</fullName>
        <inlineHelpText>Did your organization provide Real Estate Agent Services (listing agent and/or buyer&apos;s agent)?</inlineHelpText>
        <label>Provide Real Estate Agent Services?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>NWORole__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PurchasePrice__c</fullName>
        <inlineHelpText>For Pre-purchase/Homebuying Form: &quot;Enter the Purchase Price.&quot;
For Reverse Mortgage Form: &quot;Enter the Loan Limit or Appraised Value.&quot;
For Refinance Form: &quot;Enter the Current Mortgage Liens (to be paid off).&quot;</inlineHelpText>
        <label>Primary Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <description>Agency to custom relevant purposes</description>
        <inlineHelpText>Choose one most applicable value from the drop-down list</inlineHelpText>
        <label>HUD Purpose</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Homeless Assistance</fullName>
                </value>
                <value>
                    <fullName>Pre-purchase/Homebuying</fullName>
                </value>
                <value>
                    <fullName>Rental Topics</fullName>
                </value>
                <value>
                    <fullName>Non-Delinquency Post-Purchase</fullName>
                </value>
                <value>
                    <fullName>Reverse Mortgage</fullName>
                </value>
                <value>
                    <fullName>Resolving or Preventing Forward Mortgage Delinquency or Default</fullName>
                </value>
                <value>
                    <fullName>Resolving or Preventing Reverse Mortgage Delinquency or Default</fullName>
                </value>
                <value>
                    <fullName>Disaster Preparedness Assistance</fullName>
                </value>
                <value>
                    <fullName>Disaster Recovery Assistance</fullName>
                </value>
                <value>
                    <fullName>Not HUD-Reportable</fullName>
                </value>
                <value>
                    <fullName>Financial Literacy</fullName>
                    <isActive>false</isActive>
                    <label>Financial Literacy</label>
                </value>
                <value>
                    <fullName>Home Improvement Loan</fullName>
                    <isActive>false</isActive>
                    <label>Home Improvement Loan</label>
                </value>
                <value>
                    <fullName>Home Purchase Inquiry</fullName>
                    <isActive>false</isActive>
                    <label>Home Purchase Inquiry</label>
                </value>
                <value>
                    <fullName>Job Training</fullName>
                    <isActive>false</isActive>
                    <label>Job Training</label>
                </value>
                <value>
                    <fullName>Mortgage Delinquency Inquiry</fullName>
                    <isActive>false</isActive>
                    <label>Mortgage Delinquency Inquiry</label>
                </value>
                <value>
                    <fullName>Rehab Inquiry</fullName>
                    <isActive>false</isActive>
                    <label>Rehab Inquiry</label>
                </value>
                <value>
                    <fullName>Rental Assistance</fullName>
                    <isActive>false</isActive>
                    <label>Rental Assistance</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>REOProperty__c</fullName>
        <defaultValue>false</defaultValue>
        <label>REO Property</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>REO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Race__c</fullName>
        <description>HUD-Defined Race</description>
        <label>Race</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Race</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RankPercentile__c</fullName>
        <label>Rank Percentile</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReferralSource__c</fullName>
        <label>Referral Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ReferralSource</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RehabAmount__c</fullName>
        <formula>IF( OR(RecordType.DeveloperName = &apos;MortgageDelinquencyAssistanceCounseling&apos;, RecordType.DeveloperName = &apos;ReverseMortgageCounseling&apos;), RehabCost__c,
IF(RecordType.DeveloperName = &apos;PrepurchaseHomebuyingCounseling&apos;, RehabConstCostNotincinPrice__c + RehabConstrCostsincinPrice__c, IF(RecordType.DeveloperName = &apos;HomeownerCounseling&apos;, IF( ISPICKVAL(CaseSubType__c, &apos;NW Rehab&apos;) , 0,
IF(ISPICKVAL(CaseSubType__c, &apos;NW Refinance Non-Foreclosure&apos;), RehabConstCostNotincinPrice__c + RehabConstrCostsincinPrice__c,
IF(ISPICKVAL(CaseSubType__c, &apos;NW Client Other Based Services&apos;), ServiceCost__c,RehabCost__c))), RehabCost__c)) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rehab Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RehabConstCostNotincinPrice__c</fullName>
        <label>Rehab/Const Cost Not inc in Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>